--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -26,9 +26,9 @@
     "resultsCount_plural": "{{count}} results",
     "searching": "Searching...",
     "searchFor": "Searching for \"{{query}}\"...",
-    "clearSearch": "Clear Search",
-    "applyFilters": "Apply Filters",
-    "clearFilters": "Clear Filters",
+    "clearSearch": "Clear search",
+    "applyFilters": "Apply filters",
+    "clearFilters": "Clear filters",
     "viewCount": "view",
     "viewCount_plural": "views"
   },
@@ -38,17 +38,18 @@
     "tag": "Tag"
   },
   "article": {
-    "readMore": "Read More",
-    "backToHome": "Back to Home",
+    "tags": "Tags",
+    "maxTags": "Max {{max}} tags allowed",
+    "readMore": "Read more",
+    "backToHome": "Back to home",
     "notFound": "Article not found",
-    "articleNotFound": "Article Not Found",
-    "errorLoadingArticle": "Error Loading Article",
+    "articleNotFound": "The article was not found",
+    "errorLoadingArticle": "Error loading article",
     "loading": "Loading article...",
     "loadingArticles": "Loading articles...",
     "category": "Category",
-    "tags": "Tags",
     "lastUpdated": "Last updated",
-    "lastModified": "Last Modified",
+    "lastModified": "Last modified",
     "created": "Created",
     "createTitle": "Create New Article",
     "editTitle": "Edit Article",
@@ -79,9 +80,9 @@
     "references": "References",
     "referencePlaceholder": "Reference",
     "addReference": "Add Reference",
-    "changeDescription": "Change Description (Optional)",
+    "changeDescription": "Change Description (optional)",
     "changeDescriptionPlaceholder": "Describe what you changed in this version...",
-    "changeDescriptionHelp": "Help others understand what changed in this revision (max 200 characters)",
+    "changeDescriptionHelp": "Help others understand what was changed in this revision (max 200 characters)",
     "status": "Status",
     "published": "Published",
     "draft": "Draft",
@@ -97,54 +98,54 @@
     "createSuccess": "Article created successfully!",
     "saveFailed": "Failed to save article",
     "noArticlesFound": "No articles found",
-    "validation": {
-      "titleRequired": "Title is required",
-      "titleTooLong": "Title cannot exceed 200 characters",
-      "categoryRequired": "Category is required",
-      "summaryRequired": "Summary is required",
-      "summaryTooLong": "Summary cannot exceed 500 characters",
-      "contentRequired": "Content is required"
-    },
+    "validationTitleRequired": "Title is required",
+    "validationTitleTooLong": "Title cannot exceed 200 characters",
+    "validationCategoryRequired": "Category is required",
+    "validationSummaryRequired": "Summary is required",
+    "validationSummaryTooLong": "Summary cannot exceed 500 characters",
+    "validationContentRequired": "Content is required",
     "enterTag": "Type a tag and press Enter",
-    "tagLimitReached": "Maximum tags reached",
+    "tagLimitReached": "Maximum number of tags reached",
     "tagLimit": "{{current}} / {{max}} tags",
     "addCategory": "Add Category",
     "createCategory": "Create Category",
-    "createArticle": "Create Article"
+    "createArticle": "Create Article",
+    "articleDashboard": "Article Dashboard",
+    "articleCount": "{{count}} article",
+    "articleCount_plural": "{{count}} articles",
+    "searchArticles": "Search articles..."
   },
   "auth": {
-    "login": "Login",
+    "login": "Log In",
     "register": "Register",
-    "logout": "Logout",
+    "logout": "Log Out",
     "email": "Email",
     "password": "Password",
     "confirmPassword": "Confirm Password",
     "username": "Username",
-    "loginTitle": "Login to Klinkemipedia",
+    "loginTitle": "Log in to Klinkemipedia",
     "registerTitle": "Create Account",
     "noAccount": "Don't have an account?",
     "haveAccount": "Already have an account?",
-    "loginButton": "Login",
+    "loginButton": "Log In",
     "registerButton": "Register",
     "loginError": "Invalid email or password",
     "registerError": "Registration failed",
     "registerLink": "Register here",
-    "loginLink": "Login here",
+    "loginLink": "Log in here",
     "hasAccount": "Already have an account?",
     "loggingIn": "Logging in...",
     "registering": "Creating account...",
-    "errors": {
-      "usernameRequired": "Username is required",
-      "usernameTooShort": "Username must be at least 3 characters",
-      "usernameTooLong": "Username cannot exceed 20 characters",
-      "emailRequired": "Email is required",
-      "invalidEmail": "Please enter a valid email address",
-      "passwordRequired": "Password is required",
-      "passwordTooShort": "Password must be at least 6 characters",
-      "passwordMismatch": "Passwords do not match",
-      "loginFailed": "Login failed. Please try again.",
-      "registrationFailed": "Registration failed. Please try again."
-    }
+    "errorUsernameRequired": "Username is required",
+    "errorUsernameTooShort": "Username must be at least 3 characters",
+    "errorUsernameTooLong": "Username cannot exceed 20 characters",
+    "errorEmailRequired": "Email is required",
+    "errorInvalidEmail": "Please enter a valid email address",
+    "errorPasswordRequired": "Password is required",
+    "errorPasswordTooShort": "Password must be at least 6 characters",
+    "errorPasswordMismatch": "Passwords do not match",
+    "errorLoginFailed": "Login failed. Please try again.",
+    "errorRegistrationFailed": "Registration failed. Please try again."
   },
   "common": {
     "loading": "Loading...",
@@ -172,14 +173,12 @@
     "notFound": "User not found"
   },
   "page": {
-    "notFound": {
-      "title": "404",
-      "heading": "Page Not Found",
-      "message": "The page you are looking for doesn't exist or has been moved.",
-      "description": "You can return to the home page or search for articles.",
-      "goHome": "Go to Home",
-      "searchArticles": "Search Articles"
-    },
+    "notFoundTitle": "404",
+    "notFoundHeading": "Page Not Found",
+    "notFoundMessage": "The page you are looking for does not exist or has been moved.",
+    "notFoundDescription": "You can go back to the homepage or search for articles.",
+    "notFoundGoHome": "Go to Homepage",
+    "notFoundSearchArticles": "Search Articles",
     "about": "Developed by Filip Landgren (filip.landgren@gmail.com)"
   },
   "home": {
@@ -217,32 +216,32 @@
     "category": "Category",
     "createdSuccess": "Category created successfully",
     "updatedSuccess": "Category updated successfully",
-    "deletedSuccess": "deleted successfully",
+    "deletedSuccess": "deleted",
     "loadFailed": "Failed to load categories",
     "saveFailed": "Failed to save category",
     "checkFailed": "Failed to check category usage",
     "deleteFailed": "Failed to delete category",
-    "selectMoveCategory": "Please select a category to move articles to",
+    "selectMoveCategory": "Select a category to move articles to",
     "loading": "Loading...",
     "namePlaceholder": "e.g., Electrolytes",
     "descriptionPlaceholder": "Optional description for this category"
   },
   "tags": {
     "title": "Tags",
-    "manageTitle": "Manage tags",
-    "browseTitle": "Browse tags",
-    "create": "Create tag",
+    "manageTitle": "Manage Tags",
+    "browseTitle": "Browse Tags",
+    "create": "Create Tag",
     "createPlaceholder": "Enter tag name",
-    "add": "Add tag",
+    "add": "Add Tag",
     "remove": "Remove",
     "edit": "Edit",
     "delete": "Delete",
-    "merge": "Merge tags",
-    "mergeTitle": "Merge tags",
+    "merge": "Merge Tags",
+    "mergeTitle": "Merge Tags",
     "mergeInstructions": "Select source tags to merge and provide a target tag name",
-    "mergeSourcePlaceholder": "Select or search source tags",
+    "mergeSourcePlaceholder": "Select or search for source tags",
     "mergeTargetPlaceholder": "Enter target tag name",
-    "mergeConfirm": "Confirm merge",
+    "mergeConfirm": "Confirm Merge",
     "deleteConfirm": "Are you sure you want to remove this tag from all articles?",
     "name": "Name",
     "description": "Description",
@@ -252,42 +251,36 @@
     "searchPlaceholder": "Search tags...",
     "loading": "Loading tags...",
     "actions": "Actions",
-    "viewArticles": "View articles",
-    "successCreate": "Tag created",
-    "successUpdate": "Tag updated",
-    "successDelete": "Tag deleted",
-    "successMerge": "Tags merged",
+    "viewArticles": "View Articles",
+    "successCreate": "Tag created successfully",
+    "successUpdate": "Tag updated successfully",
+    "successDelete": "Tag deleted successfully",
+    "successMerge": "Tags merged successfully",
     "errorCreate": "Failed to create tag",
     "errorUpdate": "Failed to update tag",
     "errorDelete": "Failed to delete tag",
     "errorMerge": "Failed to merge tags",
-    "validation": {
-      "nameRequired": "Tag name is required",
-      "nameTooLong": "Tag name is too long",
-      "maxTags": "Maximum of {{max}} tags allowed"
-    },
-    "placeholders": {
-      "addTag": "Type a tag and press Enter",
-      "editTag": "Edit tag name"
-    },
-    "confirmation": {
-      "deleteTitle": "Delete tag",
-      "mergeTitle": "Merge tags",
-      "cancel": "Cancel",
-      "confirm": "Confirm"
-    },
-    "browseByTag": "Browse by tag",
-    "tagCloud": "Tag cloud",
-    "allTags": "All tags",
-    "tagManagement": "Tag management",
-    "mergeTags": "Merge tags",
+    "validationNameRequired": "Tag name is required",
+    "validationNameTooLong": "Tag name is too long",
+    "validationMaxTags": "Maximum of {{max}} tags allowed",
+    "placeholderAddTag": "Type a tag and press Enter",
+    "placeholderEditTag": "Edit tag name",
+    "confirmDeleteTitle": "Delete Tag",
+    "confirmMergeTitle": "Merge Tags",
+    "confirmCancel": "Cancel",
+    "confirmConfirm": "Confirm",
+    "browseByTag": "Browse by Tag",
+    "tagCloud": "Tag Cloud",
+    "allTags": "All Tags",
+    "tagManagement": "Tag Management",
+    "mergeTags": "Merge Tags",
     "mergeTagsPlaceholder": "Select or type tags to merge",
-    "mergeTagsConfirm": "Confirm merge",
-    "browseByTagTitle": "Articles tagged \"{{tag}}\"",
-    "tagCloudInstructions": "Click a tag to filter articles",
+    "mergeTagsConfirm": "Confirm Merge",
+    "browseByTagTitle": "Articles tagged with \"{{tag}}\"",
+    "tagCloudInstructions": "Click on a tag to filter articles",
     "allTagsCountLabel": "{{count}} tags",
-    "tagManagementIntro": "Admins can merge or delete tags here",
-    "mergeSuccess": "Tags merged",
+    "tagManagementIntro": "Administrators can merge or delete tags here",
+    "mergeSuccess": "Tags merged successfully",
     "mergeError": "Failed to merge tags",
     "addTag": "Add New Tag",
     "editTag": "Edit Tag",
@@ -296,24 +289,24 @@
     "tagNamePlaceholder": "Enter tag name",
     "usageCount": "Usage Count",
     "searchTags": "Search tags...",
-    "confirmDeleteTag": "Confirm Delete",
+    "confirmDeleteTag": "Confirm Deletion",
     "deleteTagWarning": "This action cannot be undone.",
     "deleteTagDetail": "Are you sure you want to delete the tag \"{{tag}}\"?",
     "deleteTagUsage": "This tag is currently used in {{count}} article(s). It will be removed from all of them.",
-    "tagDeleted": "Tag deleted successfully",
-    "tagAdded": "Tag added successfully",
-    "tagUpdated": "Tag renamed successfully",
+    "tagDeleted": "Tag deleted",
+    "tagAdded": "Tag added",
+    "tagUpdated": "Tag renamed",
     "tagExists": "A tag with this name already exists",
     "tagNameRequired": "Tag name cannot be empty",
     "currentTag": "Current tag:",
-    "newTagName": "New Tag Name",
-    "renameTagInfo": "This will rename the tag across all {{count}} article(s)",
+    "newTagName": "New tag name",
+    "renameTagInfo": "This will rename the tag in all {{count}} article(s)",
     "selectSourceTags": "Select source tags",
-    "sourceTagsHelp": "Select tags to merge into one target tag",
+    "sourceTagsHelp": "Choose tags to merge into a target tag",
     "selectTargetTag": "Select target tag",
-    "targetTagHelp": "Enter the name of the target tag",
+    "targetTagHelp": "Provide the name for the target tag",
     "enterTag": "Enter tag name",
-    "tagsMerged": "Tags merged successfully",
+    "tagsMerged": "Tags merged",
     "tagCount": "{{count}} article(s)",
     "cancel": "Cancel",
     "save": "Save Changes",
@@ -322,7 +315,7 @@
     "deleting": "Deleting...",
     "noTagsFound": "No tags found matching your search",
     "articlesTaggedWith": "Articles tagged with",
-    "noArticlesWithTag": "No articles found with this tag"
+    "noArticlesWithTag": "No articles were found with this tag"
   },
   "revisions": {
     "title": "Revision History",
@@ -331,20 +324,20 @@
     "compareVersions": "Compare Versions",
     "restoreVersion": "Restore Version",
     "viewVersion": "View Version",
-    "restoreThisVersion": "Restore This Version",
+    "restoreThisVersion": "Restore this version",
     "compareSelected": "Compare Selected",
-    "cancelCompare": "Cancel Compare",
+    "cancelCompare": "Cancel Comparison",
     "loading": "Loading revisions...",
     "loadingComparison": "Loading comparison...",
     "noRevisions": "No revisions found",
     "empty": "Empty",
     "noDescription": "No description provided",
     "editedBy": "Edited by",
-    "editedAt": "Edited at",
+    "editedAt": "Edited on",
     "changeDescription": "Change Description",
     "versionNumber": "Version {{number}}",
-    "backToList": "Back to List",
-    "selectToCompare": "Select to Compare",
+    "backToList": "Back to list",
+    "selectToCompare": "Select to compare",
     "category": "Category",
     "summary": "Summary",
     "clinicalSignificance": "Clinical Significance",
@@ -360,25 +353,17 @@
     "unusedSize": "Unused Size"
   },
   "messages": {
-    "success": {
-      "urlCopied": "URL copied to clipboard"
-    },
-    "error": {
-      "loadFailed": "Failed to load data",
-      "somethingWrong": "Something went wrong"
-    },
-    "info": {
-      "noData": "No data available"
-    },
-    "confirm": {
-      "deleteArticle": "Confirm Delete Article",
-      "deleteArticleDetail": "Are you sure you want to delete \"{{title}}\"? This action cannot be undone."
-    }
+    "successUrlCopied": "URL copied to clipboard",
+    "errorLoadFailed": "Could not load data",
+    "errorSomethingWrong": "Something went wrong",
+    "infoNoData": "No data available",
+    "confirmDeleteArticle": "Confirm Article Deletion",
+    "confirmDeleteArticleDetail": "Are you sure you want to delete \"{{title}}\"? This action cannot be undone."
   },
   "sort": {
     "by": "Sort by",
-    "descending": "Newest First",
-    "ascending": "Oldest First"
+    "descending": "Newest first",
+    "ascending": "Oldest first"
   },
   "table": {
     "title": "Title",
