Fixed ArticlesPage.js and sort by category

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -188,6 +188,7 @@
     "english": "English"
   },
   "categories": {
+    "updated": "Updated",
     "management": "Category Management",
     "add": "Add Category",
     "create": "Create Category",
