--- a/src/locales/sv/translation.json
+++ b/src/locales/sv/translation.json
@@ -38,6 +38,7 @@
     "tag": "Tagg"
   },
   "article": {
+    "updated": "Uppdaterad",
     "tags": "Taggar",
     "maxTags": "Max {{max}} taggar tillåtna",
     "readMore": "Läs mer",
